--- a/package.json
+++ b/package.json
@@ -2,5 +2,26 @@
   "dependencies": {
     "axios": "^0.19.0",
     "lit-element": "^2.1.0"
-  }
+  },
+  "devDependencies": {
+    "polyserve": "^0.27.15"
+  },
+  "name": "subscrip-tonic",
+  "description": "Welcome to Glitch\r =================",
+  "version": "1.0.0",
+  "main": "src/app.js",
+  "scripts": {
+    "start": "polyserve",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/albelop/subscrip-tonic.git"
+  },
+  "author": "albelop",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/albelop/subscrip-tonic/issues"
+  },
+  "homepage": "https://github.com/albelop/subscrip-tonic#readme"
 }
